<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>
    <string name="notification_channel_id">download_channel</string>
    <string name="notification_channel_name">Download Channel</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="details_button_text">OK</string>
    <string name="detail_download_file_name">File Name: </string>
    <string name="detail_download_status">Status: </string>
    <string name="detail_download_status_fail">Fail</string>
    <string name="detail_download_status_success">Success</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="radio_button_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_button_load_app">LoadApp - Current Repository by Udacity</string>
    <string name="radio_button_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square Inc</string>

    <string name="content_desc_main_image">Image showing a download icon</string>
    <string name="content_desc_loading_button">Download Button</string>
</resources>
