<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/motion_scene_content_main"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/iv_download"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/content_desc_main_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_download"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rbg_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="32dp"
        android:paddingBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_download">

        <RadioButton
            android:id="@+id/rb_glide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="320dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/radio_button_glide" />

        <RadioButton
            android:id="@+id/rb_load_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="320dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/radio_button_load_app" />

        <RadioButton
            android:id="@+id/rb_retrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="320dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/radio_button_retrofit" />

    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:btn_color="@color/colorPrimary"
        app:btn_color_loading="@color/colorPrimaryDark"
        app:text_color="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>