<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/motion_scene_content_detail"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_detail"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <TextView
        android:id="@+id/tv_detail_file_name_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/detail_download_file_name"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl_detail"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_detail_file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        tools:text="LoadApp.zip"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="@id/gl_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_file_name_label"/>

    <TextView
        android:id="@+id/tv_detail_download_status_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/detail_download_status"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_file_name_label"/>

    <TextView
        android:id="@+id/tv_detail_download_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:text="Success"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="@id/gl_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_file_name"/>

    <Button
        android:id="@+id/btn_detail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:text="@string/details_button_text"
        android:textSize="@dimen/default_text_size"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.motion.widget.MotionLayout>